DS-527 same fix on mobile

--- a/app/styles/_library/_objects.touts.scss
+++ b/app/styles/_library/_objects.touts.scss
@@ -31,12 +31,6 @@
 
   @include media("<=xlarge") {
     max-width: 270px;
-    right: calc(-(var(--col-width) * 6) + (var(--grid-gutter) * 4));
-
-    &.is-active {
-      transform: translateX(calc(-(var(--col-width) * 6) + (var(--grid-gutter) * 5)));
-    }
-
   }
 }
 .c-donate-tout:before {
